--- a/src/Components/NavBar/navBarStyles.css
+++ b/src/Components/NavBar/navBarStyles.css
@@ -123,6 +123,8 @@
     display: flex;
     align-items: center;
     font-family: myFirstFont;
+    margin: 0rem 0rem 0rem 10.5rem;
+    font-size: 14px;
 }
 
 .profile_section {
@@ -130,6 +132,12 @@
     align-items: center;
 }
 
+.profile_text {
+    padding: 0rem 0.5rem 0rem 0.5rem;
+    font-size: 14px;
+}
+
 .icon_element {
-    height: 1.5rem;
+    height: 1.1rem;
+    padding: 0rem 0.5rem 0rem 0.5rem;
 }
